mockers_derive/tests/compile-fail/parametrized_trait.rs
use mockers_derive::mocked;

#[mocked]
trait A<'a> {}

fn main() {}
