mockers_derive/tests/compile-fail/parametrized_trait.stderr
error: Parametrized traits are not supported yet

 --> $DIR/parametrized_trait.rs:4:8
  |
4 | trait A<'a> {}
  |        ^
